--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sami",
   "license": "ISC",
   "dependencies": {
+    "fast-xml-parser": "^3.19.0",
     "node-fetch": "^2.6.1",
     "telegraf": "^4.4.1",
     "xml2js": "^0.4.23"
